# BaiduPCS-Rust

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.image.yml  docker-compose.yml
backend/: Cargo.toml  cross.toml
backend/src/: lib.rs  logging.rs  main.rs  task_slot_pool.rs
backend/src/auth/: constants.rs  cookie_login.rs  mod.rs  qrcode.rs  session.rs  types.rs
backend/src/autobackup/: config.rs  error.rs  events.rs  manager.rs  mod.rs  persistence.rs  scan_cache.rs  task.rs  validation.rs
backend/src/autobackup/common/: mod.rs  temp_file.rs
backend/src/autobackup/priority/: mod.rs  policy.rs
backend/src/autobackup/record/: mod.rs  record_manager.rs
backend/src/autobackup/scheduler/: backup_scheduler.rs  change_aggregator.rs  mod.rs  poll_scheduler.rs  task_controller.rs
backend/src/autobackup/watcher/: file_watcher.rs  mod.rs
backend/src/common/: memory_monitor.rs  mod.rs  path_utils.rs  refresh_coordinator.rs  speed_anomaly_detector.rs  thread_stagnation_detector.rs
backend/src/config/: env_detector.rs  mod.rs  mount_detector.rs  path_validator.rs
backend/src/downloader/: chunk.rs  engine.rs  folder.rs  folder_manager.rs  manager.rs  mod.rs  progress.rs  scheduler.rs  task.rs  task_slot_pool.rs
backend/src/encryption/: buffer_pool.rs  config_store.rs  mod.rs  service.rs  snapshot.rs
backend/src/filesystem/: guard.rs  mod.rs  service.rs  types.rs
backend/src/netdisk/: client.rs  cloud_dl.rs  cloud_dl_monitor.rs  mod.rs  types.rs
backend/src/persistence/: folder.rs  history.rs  history_db.rs  manager.rs  metadata.rs  mod.rs  recovery.rs  types.rs  wal.rs
backend/src/server/: error.rs  mod.rs  state.rs
backend/src/server/events/: mod.rs  throttle.rs  types.rs
backend/src/server/handlers/: auth.rs  autobackup.rs  cloud_dl.rs  common.rs  config.rs  download.rs  file.rs  filesystem.rs  folder_download.rs  mod.rs  transfer.rs  upload.rs
backend/src/server/websocket/: handler.rs  manager.rs  message.rs  mod.rs
backend/src/sign/: devuid.rs  locate.rs  mod.rs
backend/src/transfer/: manager.rs  mod.rs  task.rs  types.rs
backend/src/uploader/: block_list_comparator.rs  chunk.rs  conflict.rs  conflict_resolver.rs  engine.rs  folder.rs  health.rs  manager.rs  mod.rs  rapid_upload.rs  scan_manager.rs  scheduler.rs  task.rs
backend/src/web_auth/: error.rs  handlers.rs  middleware.rs  mod.rs  password.rs  rate_limiter.rs  recovery.rs  state.rs  store.rs  token.rs  totp.rs  types.rs
config/: app.toml.example  config.example.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+56 files in other folders)
